# lms-fastapi

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  commands.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b3f3bee1f9c3_add_hashed_password_field_to_user_model.py  bc981401c1b1_change_time_fields.py  c27f5d1dfaaf_inital.py
api/: courses.py  sections.py  users.py
api/utils/: content_blocks.py  courses.py  sections.py  users.py
db/: db.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: content_block.py  course.py  section.py  user.py
